WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130315
CSSValueList should assert that no null values are added to it.
https://bugs.webkit.org/show_bug.cgi?id=130315
Summary
CSSValueList should assert that no null values are added to it.
Andreas Kling
Reported
2014-03-16 15:56:21 PDT
CSSValueList should assert that no null values are added to it.
Attachments
Patch
(3.56 KB, patch)
2014-03-16 15:56 PDT
,
Andreas Kling
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-03-16 15:56:53 PDT
Created
attachment 226865
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-16 15:59:35 PDT
Attachment 226865
[details]
did not pass style-queue: ERROR: Source/WebCore/css/CSSValueList.h:57: The parameter name "value" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/css/CSSValueList.h:58: The parameter name "value" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 2 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Darin Adler
Comment 3
2014-03-16 19:25:55 PDT
Comment on
attachment 226865
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=226865&action=review
Bot says: Regressions: Unexpected crashes (1) mathml/wbr-in-mroot-crash.html [ Crash ] r=me if you look into that
> Source/WebCore/css/CSSValueList.h:58 > + void append(PassRefPtr<CSSValue> value); > + void prepend(PassRefPtr<CSSValue> value);
Like the style bot says, you should remove the argument names here.
Andreas Kling
Comment 4
2014-03-16 21:32:22 PDT
Committed
r165717
: <
http://trac.webkit.org/changeset/165717
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug