CSSValueList should assert that no null values are added to it. <https://webkit.org/b/130315>

Add assertions in CSSValueList's append() and prepend() that we are
not adding a null value. This caught a single place in CSSParser
that was appending an alread-released RefPtr to a CSSValueList.
That list was eventually discarded anyway (due to "foundClip" now
being true), so the fix is simply to remove the adding.

Eventually we should use Ref and PassRef all over for CSSValueList,
this is just a first step on the way.

Reviewed by Darin Adler.

* css/CSSParser.cpp:
(WebCore::CSSParser::parseFillShorthand):
* css/CSSValueList.h:
(WebCore::CSSValueList::append):
(WebCore::CSSValueList::prepend):

Canonical link: https://commits.webkit.org/148300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165717 268f45cc-cd09-0410-ab3c-d52691b4dbfc